# rust-lat-long

./: .gitignore  Cargo.toml  Makefile  README.md
src/: alt.rs  coord.rs  error.rs  fmt.rs  inner.rs  lat.rs  lib.rs  long.rs  parse.rs
tests/: coordinate_tests.rs  latitude_tests.rs  longitude_tests.rs  parse_tests.rs
